feat(logging): harden logging and observability across the factory (#47)
* docs(openspec): revise harden-logging-observability per artifacts review

Resolve the sanitizer-placement blocker: FindingsSanitizer stays
  self-contained in the published plugin API; LogText is the internal choke point; the two form a declared pair with a corpus equivalence spec. Also fold in review points 2-7 (stale counts, FactoryApplication DEBUG-line task, stage-finished-event coordination, pair bookkeeping).

Refs: harden-logging-observability FR6, FR7, D5, D8

* implement harden-logging-observability

* openspec: add wire-host-mid-round-push

* fix after audit-implementation

* fix after audit-implementation

* refactor: fix IDE findings across uncommitted files (dedup fixtures, records, dead code)

* openspec: update cap-abort-cause-length after review

* openspec: update wire-host-mid-round-push after review

* openspec: update polish-sandbox-forensics after review

* openspec: update fix-denial-attribution-durability after review

* openspec: update add-subprocess-access-log after review

* refactoring

* refactoring

* docs(openspec): sync harden-logging-observability specs and archive

Adds the factory-logging capability and folds the change's delta specs into the main spec set.

Change: harden-logging-observability